# learn-aws

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.logs.yml  docker-compose.server.yml  docker-compose.traefik.yml  main.py  me.txt  pyproject.toml  requirements.txt
router/: chat.py
